--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3,6 +3,35 @@
 
 @STRING{ijnmf = {Int. {J}. {N}umer. {M}ethods {F}luids}}
 
+@Article{oelgaard:2010,
+  author  = "K. B. \O{}lgaard and G. N. Wells",
+  title   = "Optimisations for Quadrature Representations of Finite Element
+              Tensors through Automated Code Generation",
+  journal = "{ACM} Transactions on Mathematical Software",
+  volume  = "37",
+  number  = "1",
+  year    = "2010",
+  pages   = "8:1--8:23",
+  URL     = "http://dx.doi.org/10.1145/1644001.1644009",
+}
+
+@book{aho_ullman:1986,
+author     = "A. V. Aho and R. Sethi and J. D. Ullman",
+title      = "Compilers: Principles, Techniques and Tools",
+year       = "1986",
+publisher  = "Addison-Wesley",
+}
+
+@book{karniadakis:2005,
+author     = "G. E. Karniadakis and S. J. Sherwin",
+title      = "Spectral/\emph{hp}  Element Methods for Computational Fluid Dynamics",
+year       = "2005",
+series     = "Numerical Mathematics and Scientific Computation",
+publisher  = "Oxford University Press",
+address    = {Oxford},
+edition    = {Second}
+}
+
 @article{WolfHeath2009,
 author={Michael M. Wolf and Michael T. Heath},
 title={Combinatorial optimization of matrix-vector multiplicaion in finite element assembly},
