Use Palatino font with Palatino math.

--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -44,7 +44,8 @@
 \usepackage{sectsty}
 %\usepackage[Sonny]{fncychap}
 %\usepackage{newcent}
-\usepackage{palatino}
+%\usepackage{palatino}
+\usepackage{mathpazo}
 
 % Chapter title
 \makeatletter
@@ -160,7 +161,7 @@
 \newtheorem{remark}{Remark}[section]
 
 % Code environment
-\DefineVerbatimEnvironment{code}{Verbatim}{frame=single,rulecolor=\color{blue}}
+\DefineVerbatimEnvironment{code}{Verbatim}{fontsize=\footnotesize,frame=single,rulecolor=\color{blue}}
 \newcommand{\codeinput}[1]{\VerbatimInput[fontsize=\footnotesize,frame=single,rulecolor=\color{blue}]{#1}}
 
 % Create index
