added mortensen chapter

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,6 +1,117 @@
 % This file was created with JabRef 2.3.1.
 % Encoding: UTF8
 
+
+@InProceeding{nsbench,
+  author = {K. Valen-Sendstad and A. Logg and K.-A. Mardal and H. Narayanan and M. Mortensen},
+  title = { A Note on the Efficiency and Accuracy of Some Common Finite Element Schemes for the Incompressible Navier--Stokes Equations},
+  year = {2009},
+  abstract = {},
+  booktitle = {Automated Scientific Computing},
+  editor = {Anders Logg, Kent-Andre Mardal, Garth Wells},
+  publisher = {Springer},
+}
+
+
+@Book{ Cia78,
+	author = "P. G. Ciarlet",
+	title = "The Finite Element Method for Elliptic Problems",
+	publisher = "North-Holland, Amsterdam, New York, Oxford",
+	year = "1978"
+}
+
+@Book{ Canuto88,
+	author = "C. Canuto and M. Y. Hussaini and A. Quarteroni and T. A. Zang",
+	title = "Spectral Methods in Fluid Mechanics",
+	publisher = "Springer-Verlag, New York",
+	year = "1988"
+}
+
+@Book{ Canuto07,
+	author = "C. Canuto and M. Y. Hussaini and A. Quarteroni and T. A. Zang",
+	title = "Spectral Methods, evolution to complex geometries and applications to fluid dynamics",
+	publisher = "Springer-Verlag, New York",
+	year = "2007"
+}
+
+@TechReport{ Malik1984,
+	author = "M. R. Malik and T. R. Zang and M. Y. Hussaini",
+	title = "A spectral collocation method for the Navier Stokes equations",
+	Institution = "NASA",
+	Number = "172365, ICASE report no. 84-19.",
+	year = "1984"
+}
+
+@Electronic{ semtex,
+	title = "Semtex (http://users.monash.edu.au/\texttildelow bburn/semtex.html)",
+	author = "H. Blackburn",
+	url = "http://users.monash.edu.au/bburn/semtex.html",
+	year = "2009"
+}
+
+@Article{ simo94,
+	title = "Unconditional stability and long-term behavior of transient algorithms for the incompressible Navier-Stokes and Euler equations",
+	author = "J. C. Simo and F. Armero",
+	journal = "Computer Methods in Applied Mechanics and Engineering",
+	pages = "111--154",
+	volume = "111",
+	year = "1994"
+}
+
+@Book{ tref06,
+	title = "Spectral methods in Matlab",
+	author = "L. N. Trefethen",
+	publisher = "Springer-Verlag, New York",
+	year = "2006"
+}
+
+@Article{ kim85,
+	title = "Application of a fractional-step method for Navier-Stokes equations",
+	author = "J. Kim and P. Moin",
+	journal = "J. Comput. Phys.",
+	pages = "308--323",
+	volume = "59",
+	year = "1985"
+}
+
+@InBook{ bench,
+	title = "Automated Solution of Differential Equations",
+	author = "Kristian Valen-Sendstad and Anders Logg and Kent Andr{\'e} Mardal and Harish Narayanan and Mikael Mortensen",
+	chapter = "Benchmark ",
+	year = "2010",
+	pages = "Benchmark",
+	editor = "Anders Logg and Garth Wells and Kent Andr{\'e} Mardal"
+}
+
+@InBook{ langtangen,
+	title = "Automated Solution of Differential Equations",
+	author = "Hans Petter Langtangen",
+	chapter = "Tutorial ",
+	year = "2010",
+	pages = "Tutorial",
+	editor = "Anders Logg and Garth Wells and Kent Andr{\'e} Mardal"
+}
+
+@InBook{ folder,
+	title = "Automated Solution of Differential Equations",
+	author = "Mikael Mortensen and Kent Andr{\'e} Mardal",
+	chapter = "Folder ",
+	year = "2010",
+	pages = "Folder",
+	editor = "Anders Logg and Garth Wells and Kent Andr{\'e} Mardal"
+}
+
+@Article{ orzag71,
+	title = "Accurate solution of the Orr-Sommerfeld stability equation ",
+	author = "S. A. Orzag",
+	journal = "J. Fluid Mech.",
+	pages = "689--703",
+	volume = "50",
+	year = "1971"
+}
+
+
+
 @STRING{ijnmf = {Int. {J}. {N}umer. {M}ethods {F}luids}}
 
 @Article{oelgaard:2010,
