--- a/book.tex
+++ b/book.tex
@@ -61,6 +61,7 @@
 \includechapter{hoffman-3}
 \includechapter{mardal-4}
 \includechapter{rognes}
+\includechapter{mortensen}
 
 % Authors
 % Include list of authors and affiliation here (so we don't need to write out
