Add chapter [logg-3]

--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -140,6 +140,7 @@
 \newcommand{\Hcurl}{H(\mathrm{curl})}
 \newcommand{\nedelec}{N\'ed\'elec}
 \newcommand{\babuska}{Babu\v{s}ka}
+\newcommand{\tab}{\hspace*{2em}}
 
 % Math operators
 \DeclareMathOperator{\PE}{PE}
