--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -141,6 +141,7 @@
 \newcommand{\nedelec}{N\'ed\'elec}
 \newcommand{\babuska}{Babu\v{s}ka}
 \newcommand{\tab}{\hspace*{2em}}
+\newcommand{\Rset}{\ensuremath{\mathbb{R}}}
 
 % Math operators
 \DeclareMathOperator{\PE}{PE}
