Add some more notes on notation

--- a/notation/notation.tex
+++ b/notation/notation.tex
@@ -4,11 +4,29 @@
 
 \linespread{1.2}
 
+\section*{General}
+
+\begin{itemize}
+\item
+  Titles of chapters, sections etc. should \emph{not} be capitalized
+\end{itemize}
+
+\section*{Variable names}
+
 \begin{tabular}{ccl}
   $T$ &--&
   cell (note: changed from $K$) \\
   $A_T$ &--&
   element tensor (note: changed from $A^K$) \\
 \end{tabular}
+
+\section*{Things to discuss}
+
+\begin{itemize}
+\item
+  $a(v, u)$ or $a(u, v)$?
+\item
+  British or American English?
+\end{itemize}
 
 \end{document}
