Add chapter [kirby-8]

--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -142,6 +142,7 @@
 \newcommand{\babuska}{Babu\v{s}ka}
 \newcommand{\tab}{\hspace*{2em}}
 \newcommand{\Rset}{\ensuremath{\mathbb{R}}}
+\newcommand{\inner}[2]{\langle #1, #2 \rangle}
 
 % Math operators
 \DeclareMathOperator{\PE}{PE}
