Add note about notation

--- a/notation/notation.tex
+++ b/notation/notation.tex
@@ -1,5 +1,7 @@
 \documentclass{article}
 
+\newcommand{\inner}[2]{\langle #1, #2 \rangle}
+
 \begin{document}
 
 \linespread{1.2}
@@ -19,6 +21,28 @@
   $A_T$ &--&
   element tensor (note: changed from $A^K$) \\
 \end{tabular}
+
+\section*{Math notation}
+
+\begin{tabular}{ccl}
+  $\inner{v}{w}$ &--&
+  inner product, use command \texttt{inner} \\
+\end{tabular}
+
+\section*{Other notation}
+
+\begin{tabular}{ccl}
+  Use \emph{subcomponent}, \emph{subelement} instead of
+  \emph{sub component}, \emp{sub element} etc., cf.
+  http://www.thefreedictionary.com/subcomponent.
+\end{tabular}
+
+\section*{Useful macros}
+
+\begin{itemize}
+\item
+  Use \texttt{eqref} to refer to equations
+\end{itemize}
 
 \section*{Things to discuss}
 
