Add chapter [kvs-1]

--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -95,6 +95,7 @@
 % Widths, use for figures
 \newcommand{\largewidth}{10cm}
 \newcommand{\smallwidth}{5cm}
+\newcommand{\codesize}{\footnotesize}
 
 % Project names
 \newcommand{\projectfont}[1]{{#1}}
@@ -143,6 +144,7 @@
 \newcommand{\tab}{\hspace*{2em}}
 \newcommand{\Rset}{\ensuremath{\mathbb{R}}}
 \newcommand{\inner}[2]{\langle #1, #2 \rangle}
+\newcommand{\deltat}{\Delta t}
 
 % Math operators
 \DeclareMathOperator{\PE}{PE}
