updates in the CSF chapter

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3,6 +3,158 @@
 
 @STRING{ijnmf = {Int. {J}. {N}umer. {M}ethods {F}luids}}
 
+
+@article{Gupta2009,
+    author = {Gupta, S. and Soellinger, M. and Boesiger, P. and Pulikako, D. and Kurtcuoglu, V.},
+    title  = {Three-Dimensional computational modeling of subject -specific cerebrospinal fluid flow in the subarachnoid space},
+    journal= {J. Biomech. Eng.},
+    volume = {131},
+    year   = {2009},
+}
+
+@article{Haughton2003,
+    author = {Haughton, V. and Korosec, F. R. and Medow, J. E. and Dolar, M. T. and
+              Iskandar, B. J.},
+    title  = {Peak systolic and diastolic {CSF} velocity in the foramen magnum
+              in adult patients with {C}hiari {I} malformations and in normal
+              control participants},
+    journal= {Am. J. Neuroradiol.},
+    volume = {24},
+    pages  = {169-176},
+    year   = {2003},
+}
+
+@article{Heiss1999,
+    author = {Heiss, J. D. and Patronas, N. and DeVroom, H. L. and Shawker, T. and 
+              Ennis, R. and Kammerer, W. and Eidsath, A. and Talbot, T. and Morris, J. and 
+              Eskioglu, E. and Oldfield, E. H.},
+    title  = {Elucidating the pathophysiology of syringomyelia},
+    journal= {J. Neurosurg.},
+    volume = {91},
+    pages  = {532-562},
+    year   = {1999},
+}
+
+
+@article{Hofmann2000,
+    author = {Hofmann, E. and Warmuth-Metz, M. and Bendszus, M. and Solymosi, L.},
+    title  = {Phase-contrast {MR} imaging of the cervical {CSF} and spinal cord: volumetric motion analysis in patients with {C}hiari I malformation},
+    journal= {AJNR Am J Neuroradiol},
+    volume = {21},
+    pages  = {151--158},
+    year   = {2000},
+}
+
+@article{Greitz1999,
+    author = "Greitz, D. and Ericson, K. and Flodmark O.",
+    title  = "Pathogenesis and Mechanics of Spinal Cord Cysts",
+    journal= "Int. J. Neuroradiol.",
+    volume = "5",
+    number = "2",
+    pages  = "61-78",
+    year   = "1999"}
+
+@article{Enzmann1991,
+    author = {Enzmann, D. and Pelc, N. J.},
+    title  = {Normal Flow Patterns of Intracranial and Spinal Cerebrospinal Fluid Defined with Phase-Contrast Cine MR Imaging},
+    journal= {Radiology},
+    volume = {178},
+    pages  = {467-474},
+    year   = {1991},
+}
+
+
+
+@article{Alperin2006,
+    author = {Alperin, N. and Mazda, M. and Lichtor, T. and  Lee, S. H.},
+    title  = {From cerebrospinal fluid pulsation to noninvasive intracranial compliance and pressure measured by MRI flow studies},
+    journal= {Current Medical Imaging Reviews},  
+    volume = {2},
+    pages  = {117-129},
+    year   = {2006},
+}
+
+@article{Pinna2000,
+    author = {Pinna, G. and Alessandrini, F. and Alfieri, A. and Rossi, M. and Bricolo, A.},
+    title  = {Cerebrospinal fluid flow dynamics study in {C}hiari {I} malformation: implications for syrinx formation},
+    journal= {Neurosurg Focus 8},
+    volume = {3},
+    number = {3},
+    year   = {2000},
+}
+
+@article{Loth2001,
+    author = {Loth, F. and Yardimci, M. A. and Alperin, N.},
+    title  = {Hydrodynamic modeling of cerebrospinal fluid motion within the
+              spinal cavity},
+    journal= {J. Biomech. Eng.},
+    volume = {123},
+    pages  = {71-79},
+    year   = {2001},
+}
+
+
+@misc{Milhorat1999,
+    author = "Milhorat, T. and Chou, M. and Trinidad, E. and Kula, R. and Mandell, M. and 
+              Wolpert, C. and Speer, M.",
+    title  = "Chiari I Malformations Redefined: Clinical and Radiographic Findings for 364 Sympomatic Patients",
+    journal= "Congress of Neurological Surgeons",
+    year   = "1999"}
+
+@article{Milhorat2003,
+    author = "Milhorat, T. and Bolognese, P. A",
+    title  = "Tailored operative technique for chiari Type I malformations using intraoperative color doppler ultrasonography",
+    journal= "Neurosurgery",
+    volume = "53",
+    number = "4",
+    pages = "899-906",
+    year   = "2003"}
+
+@article{Roldan2008,
+    author = {Roldan, A. and Haughton, V. and Wieben, O. and Osswald, T. and Chesler, N.},
+    title  = {Characterization of complex {CSF} hydrodynamics at the cranio-vertebral
+              junction with computational flow analysis: {H}ealthy and {C}hiari {I}
+              malformation},
+    journal= {Submitted to Am. J. Neuroradiol.},
+    year   = {2008},
+}
+
+@article{Smith2006,
+    author = {Smith, B. W. and Chase2, G. J. and Shaw, G. M. and Nokes, R. I.},
+    title  = {Simulating transient ventricular interaction using a minimal cardiovascular system model},
+    journal= {Physiological Measurement},
+	pages = {165-179},
+    year   = {2006},
+}
+
+
+@article{Oldfield1994, 
+    author = "Oldfield, E. H. and Muraszko, K. and Shawker, T. H. and Patronas, N. J.",
+    title  = "Pathophyiology of syringomyelia associated with Chiari I malformation of the cerebellar tonsils",
+    journal= "Neurosurg.",
+    volume = "80",
+    pages = "3-15",
+    year   = "1994"}
+
+@misc{netgen,
+    title = {NetGen - a 3D mesh generator},
+    author = {Sch\"{o}berl, J. and Gerstmayr, H. and  Gaisbauer, R.},
+    location = {http://www.hpfem.jku.at/netgen/},
+}
+
+@misc{gmsh,
+    title = {GMSH - a 3D mesh generator},
+    author = {Geuzaine, C. and Remacle, J.-F.},
+    location = {http://www.geuz.org/gmsh/},
+}
+
+
+@misc{chiari_inst,
+    key = {The Chiari Institute},
+    location = {http://www.chiariinstitute.com/chiari_malformation.html},
+}
+
+
 @Article{Oddrun,
   author = {K.-A. Mardal and S. Hentchel and O. C. Myklebust and T. Ingebrigtsen and J. Isaksen},
   title = {On the Importance of Patient-Specific Boundary Conditions for Blood Flow Simulations in Major Cerebral Arteries {\textendash} A Case Study},
