updates in mikael chapter and added a package to preamble.

--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -29,6 +29,7 @@
 \usepackage{xspace}
 \usepackage{pythonhighlight}
 \usepackage{subfigure}
+\usepackage{textcomp}
 
 % Bibliography
 \usepackage[round,authoryear,comma,sort]{natbib}
