Add nikbakht chapter.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -25,8 +25,8 @@
 }
 
 @article{Heiss1999,
-    author = {Heiss, J. D. and Patronas, N. and DeVroom, H. L. and Shawker, T. and 
-              Ennis, R. and Kammerer, W. and Eidsath, A. and Talbot, T. and Morris, J. and 
+    author = {Heiss, J. D. and Patronas, N. and DeVroom, H. L. and Shawker, T. and
+              Ennis, R. and Kammerer, W. and Eidsath, A. and Talbot, T. and Morris, J. and
               Eskioglu, E. and Oldfield, E. H.},
     title  = {Elucidating the pathophysiology of syringomyelia},
     journal= {J. Neurosurg.},
@@ -68,7 +68,7 @@
 @article{Alperin2006,
     author = {Alperin, N. and Mazda, M. and Lichtor, T. and  Lee, S. H.},
     title  = {From cerebrospinal fluid pulsation to noninvasive intracranial compliance and pressure measured by MRI flow studies},
-    journal= {Current Medical Imaging Reviews},  
+    journal= {Current Medical Imaging Reviews},
     volume = {2},
     pages  = {117-129},
     year   = {2006},
@@ -95,7 +95,7 @@
 
 
 @misc{Milhorat1999,
-    author = "Milhorat, T. and Chou, M. and Trinidad, E. and Kula, R. and Mandell, M. and 
+    author = "Milhorat, T. and Chou, M. and Trinidad, E. and Kula, R. and Mandell, M. and
               Wolpert, C. and Speer, M.",
     title  = "Chiari I Malformations Redefined: Clinical and Radiographic Findings for 364 Sympomatic Patients",
     journal= "Congress of Neurological Surgeons",
@@ -128,7 +128,7 @@
 }
 
 
-@article{Oldfield1994, 
+@article{Oldfield1994,
     author = "Oldfield, E. H. and Muraszko, K. and Shawker, T. H. and Patronas, N. J.",
     title  = "Pathophyiology of syringomyelia associated with Chiari I malformation of the cerebellar tonsils",
     journal= "Neurosurg.",
@@ -1760,7 +1760,7 @@ J. Res. Nat. Bur. Standards},
 }
 
 @Book{BrezziFortin,
-  author = { F. Brezzi and M. Fortin},
+  author = {F. Brezzi and M. Fortin},
   title = {Mixed and hybrid finite element methods},
   publisher = {Springer-Verlag},
   year = {1991},
@@ -2267,7 +2267,7 @@ saddle point problems: field-of-values analysis},
 }
 
 @article {brezzi-douglas,
-    AUTHOR = {Brezzi, Franco and Douglas, Jr., Jim},
+    AUTHOR = {Brezzi, F, and Douglas, Jr., J.,},
      TITLE = {Stabilized mixed methods for the {S}tokes problem},
    JOURNAL = {Numerische Mathematik},
     VOLUME = {53},
@@ -4462,7 +4462,7 @@ symmetric formulations that converge for all velocity/pressure spaces},
 }
 
 @ARTICLE{ArnoldRognes2009,
-  author = {Arnold, Douglas N. and Rognes, Marie E.},
+  author = {Arnold, D. N. and Rognes, M. E.},
   title = {Stability of {L}agrange elements for the mixed {L}aplacian},
   journal = {Calcolo},
   year = {2009},
@@ -5157,7 +5157,7 @@ symmetric formulations that converge for all velocity/pressure spaces},
 }
 
 @ARTICLE{Boffi1997,
-  author = {Boffi, Daniele},
+  author = {Boffi, D.},
   title = {Three-dimensional finite element methods for the {S}tokes problem},
   journal = {SIAM J. Numer. Anal.},
   year = {1997},
@@ -5175,7 +5175,7 @@ symmetric formulations that converge for all velocity/pressure spaces},
 }
 
 @ARTICLE{BoffiBrezziGastaldi1999,
-  author = {Boffi, Daniele and Brezzi, Franco and Gastaldi, Lucia},
+  author = {Boffi, D. and Brezzi, F. and Gastaldi, L.},
   title = {On the problem of spurious eigenvalues in the approximation of linear
 	elliptic problems in mixed form},
   journal = {Math. Comp.},
@@ -5292,7 +5292,7 @@ symmetric formulations that converge for all velocity/pressure spaces},
 }
 
 @ARTICLE{Brezzi1974,
-  author = {Franco Brezzi},
+  author = {F. Brezzi},
   title = {On the Existence, Uniqueness and Approximation of Saddle-Point Problems
 	Arising from Lagrangian Multipliers},
   journal = {RAIRO Anal. Num\'er.},
@@ -5304,8 +5304,7 @@ symmetric formulations that converge for all velocity/pressure spaces},
 }
 
 @ARTICLE{BrezziDouglasEtAl1987,
-  author = {Brezzi, Franco and Douglas, Jr., Jim and Fortin, Michel and Marini,
-	L. Donatella},
+  author = {Brezzi, F. and Douglas, Jr., J. and Fortin, M. and Marini, L. D.},
   title = {Efficient rectangular mixed finite elements in two and three space
 	variables},
   journal = {RAIRO Mod\'el. Math. Anal. Num\'er.},
@@ -5323,7 +5322,7 @@ symmetric formulations that converge for all velocity/pressure spaces},
 }
 
 @ARTICLE{BrezziDouglasEtAl1985,
-  author = {Brezzi, Franco and Douglas, Jr., Jim and Marini, L. D.},
+  author = {Brezzi, F. and Douglas, Jr., J. and Marini, L. D.},
   title = {Two families of mixed finite elements for second order elliptic problems},
   journal = {Numer. Math.},
   year = {1985},
@@ -9176,7 +9175,7 @@ symmetric formulations that converge for all velocity/pressure spaces},
 }
 
 @INBOOK{langtangen,
-  chapter = {Tutorial },
+  chapter = {Tutorial},
   pages = {Tutorial},
   title = {Automated Solution of Differential Equations},
   year = {2010},
@@ -10563,7 +10562,7 @@ symmetric formulations that converge for all velocity/pressure spaces},
 }
 
 @INBOOK{folder,
-  chapter = {Folder },
+  chapter = {Folder},
   pages = {Folder},
   title = {Automated Solution of Differential Equations},
   year = {2010},
@@ -11457,21 +11456,18 @@ symmetric formulations that converge for all velocity/pressure spaces},
 }
 
 @ARTICLE{RognesKirbyEtAl2008,
-  author = {M. Rognes and Robert C. Kirby and Anders Logg},
-  title = {Efficient Assembly of $H(\mathrm{div})$ and $H(\mathrm{curl})$ Conforming
-	Finite Elements},
-  journal = {SIAM J. Sci. Comput.},
-  year = {2008},
-  note = {submitted by Marie 2008-10-24, resubmitted by Marie 2009-05-22},
-  category = {articles},
-  owner = {logg},
-  simula = {ok},
-  status = {submitted},
-  timestamp = {2009.06.06}
+  author = {Rognes, M. E. and Kirby,R. C. and Logg, A.},
+  title = {Efficient assembly of {$H({\rm div})$} and {$H({\rm curl})$} conforming
+	finite elements},
+  journal = {SIAM Journal on Scientific Computing},
+  year = {2009},
+  volume = {31},
+  pages = {4130-4151},
+  number = {6}
 }
 
 @UNPUBLISHED{www:ascot,
-  author = {Marie E. Rognes},
+  author = {M. E. Rognes},
   title = {{Automated Stability Condition Tester (ASCoT)}},
   note = {\url{https://launchpad.net/ascot}},
   year = {2009}
@@ -13079,6 +13075,48 @@ symmetric formulations that converge for all velocity/pressure spaces},
   owner = {logg},
   timestamp = {2009.06.06}
 }
+
+@ARTICLE{belytschko:1999,
+  author = {T. Belytschko and T. Black},
+  title = {Elastic crack growth in finite elements with minimal remeshing},
+  journal = {International Journal for Numerical Methods in Engineering},
+  year = {1999},
+  volume = {45},
+  pages = {601--620},
+  number = {5}
+}
+
+@ARTICLE{moes:1999,
+  author = {N. Mo\"es and J. Dolbow and T. Belytschko},
+  title = {A finite element method for crack growth without remeshing},
+  journal = {International Journal for Numerical Methods in Engineering},
+  year = {1999},
+  volume = {46},
+  pages = {231--150},
+  number = {1}
+}
+
+@ARTICLE{nikbakht:2009,
+  author = {M. Nikbakht and G. N. Wells},
+  title = {Automated modelling of evolving discontinuities},
+  journal = {Algorithms},
+  year = {2009},
+  volume = {2},
+  pages = {1008--1030},
+  number = {3}
+}
+
+@ARTICLE{wells:2001,
+  author = {G. N. Wells and L. J. Sluys},
+  title = {A new method for modelling cohesive cracks using finite elements},
+  journal = {International Journal for Numerical Methods in Engineering},
+  year = {2001},
+  volume = {50},
+  pages = {2667--2682},
+  number = {12},
+}
+
+
 
 @comment{jabref-meta: fileDirectory:.;}
 
