--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -30,6 +30,7 @@
 \usepackage{pythonhighlight}
 \usepackage{subfigure}
 \usepackage{textcomp}
+\usepackage[only,llbracket,rrbracket]{stmaryrd}
 
 % Bibliography
 \usepackage[round,authoryear,comma,sort]{natbib}
@@ -140,12 +141,13 @@
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\Hdiv}{H(\mathrm{div})}
 \newcommand{\Hcurl}{H(\mathrm{curl})}
-\newcommand{\nedelec}{N\'ed\'elec}
-\newcommand{\babuska}{Babu\v{s}ka}
 \newcommand{\tab}{\hspace*{2em}}
 \newcommand{\Rset}{\ensuremath{\mathbb{R}}}
 \newcommand{\inner}[2]{\langle #1, #2 \rangle}
 \newcommand{\deltat}{\Delta t}
+
+\newcommand{\nedelec}{N\'ed\'elec}
+\newcommand{\babuska}{Babu\v{s}ka}
 
 % Math operators
 \DeclareMathOperator{\PE}{PE}
