Add References to toc

--- a/book.tex
+++ b/book.tex
@@ -73,6 +73,8 @@
 \renewcommand\bibname{References}
 \bibliographystyle{abbrvnat}
 \bibliography{bibliography}
+\addcontentsline{toc}{part}{References}
+
 
 % Appendix
 \appendix
