Added citation to Stenberg, 1984 as recommended by 2nd referee.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -13117,6 +13117,17 @@ symmetric formulations that converge for all velocity/pressure spaces},
 }
 
 
+@ARTICLE{stenberg:1984,
+  author = {Rolf Stenberg},
+  title = {Analysis of mixed finite elements methods for the {S}tokes problem: a unified approach},
+  journal = {Mathematics of Computation},
+  year = {1984},
+  volume = {42},
+  pages = {9--23},
+  number = {165},
+}
+
+
 
 @comment{jabref-meta: fileDirectory:.;}
 
