Updates for code example to comply with ASCoT 0.8+

--- a/book.tex
+++ b/book.tex
@@ -16,51 +16,51 @@
 %\part{Overview}
 
 \includechapter{intro}
-\includechapter{langtangen}
+%\includechapter{langtangen}
 
 \part{Methodology}
 
-\includechapter{kirby-7}
-\includechapter{kirby-6}
-\includechapter{kirby-1}
-\includechapter{kirby-5}
-\includechapter{logg-3}
-\includechapter{oelgaard-2}
-\includechapter{kirby-8}
-\includechapter{kirby-4}
-\includechapter{hoffman-4}
+%% \includechapter{kirby-7}
+%% \includechapter{kirby-6}
+%% \includechapter{kirby-1}
+%% \includechapter{kirby-5}
+%% \includechapter{logg-3}
+%% \includechapter{oelgaard-2}
+%% \includechapter{kirby-8}
+%% \includechapter{kirby-4}
+%% \includechapter{hoffman-4}
 
 \part{Implementation}
 
-\includechapter{logg-2}
-\includechapter{logg-1}
-\includechapter{kirby-3}
-\includechapter{kirby-2}
-\includechapter{wilbers}
-\includechapter{alnes-3}
-\includechapter{alnes-2}
-\includechapter{alnes-1}
-\includechapter{hoffman-2}
-\includechapter{mardal-2}
+%% \includechapter{logg-2}
+%% \includechapter{logg-1}
+%% \includechapter{kirby-3}
+%% \includechapter{kirby-2}
+%% \includechapter{wilbers}
+%% \includechapter{alnes-3}
+%% \includechapter{alnes-2}
+%% \includechapter{alnes-1}
+%% \includechapter{hoffman-2}
+%% \includechapter{mardal-2}
 
 \part{Applications}
 
-\includechapter{terrel}
-\includechapter{kvs-1}
-\includechapter{mortensen}
-\includechapter{kvs-2}
-\includechapter{hentschel}
-\includechapter{hoffman-1}
-\includechapter{lopes}
-\includechapter{shan}
-\includechapter{hake}
-\includechapter{lezar}
-\includechapter{oelgaard-1}
-%% FIXME: Insert chapter [narayanan] if not merged with [oelgaard-1]
-\includechapter{nikbakht}
-\includechapter{schroll}
-\includechapter{hoffman-3}
-\includechapter{mardal-4}
+%% \includechapter{terrel}
+%% \includechapter{kvs-1}
+%% \includechapter{mortensen}
+%% \includechapter{kvs-2}
+%% \includechapter{hentschel}
+%% \includechapter{hoffman-1}
+%% \includechapter{lopes}
+%% \includechapter{shan}
+%% \includechapter{hake}
+%% \includechapter{lezar}
+%% \includechapter{oelgaard-1}
+%% %% FIXME: Insert chapter [narayanan] if not merged with [oelgaard-1]
+%% \includechapter{nikbakht}
+%% \includechapter{schroll}
+%% \includechapter{hoffman-3}
+%% \includechapter{mardal-4}
 \includechapter{rognes}
 
 % Authors
@@ -85,6 +85,6 @@
 
 % Index
 \cleardoublepage
-\printindex
+%\printindex
 
 \end{document}
