Some work on missing figures in chapter [kirby7]

--- a/notation/notation.tex
+++ b/notation/notation.tex
@@ -8,9 +8,15 @@
 
 \section*{General}
 
+Code environments: begin{python}, begin{c++}
+
+Space-time slab S_n = \mathcal{T}\times I_n
+
 \begin{itemize}
 \item
   Titles of chapters, sections etc. should \emph{not} be capitalized
+\item
+  Only number referenced equations
 \end{itemize}
 
 \section*{Variable names}
