Get book to compile again

--- a/book.tex
+++ b/book.tex
@@ -75,10 +75,8 @@
 \bibliography{bibliography}
 \addcontentsline{toc}{part}{References}
 
-
 % Appendix
-\appendix
-\includeappendix{notation}
+%\appendix
 
 % List of authors
 \includemisc{authors}
