--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -5,29 +5,28 @@
 \usepackage{graphicx}
 \usepackage{a4wide}
 \usepackage{fancyhdr}
-
-
 \usepackage{bm}
 \usepackage{psfrag}
 \usepackage{makeidx}
 \usepackage{longtable}
 \usepackage{array}
+\usepackage[procnames]{listings}
+\usepackage[usenames]{color}
+\usepackage{multicol}
+\usepackage{url}
+\usepackage{xspace}
+\usepackage{textcomp}
+\usepackage[only,llbracket,rrbracket]{stmaryrd}
 \usepackage{algorithm}
 \usepackage{algorithmicx}
 \usepackage{algpseudocode}
-\usepackage[procnames]{listings}
-\usepackage[usenames]{color}
 \usepackage{moreverb}
-\usepackage{algorithm}
-\usepackage{multicol}
-\usepackage{url}
-
 \usepackage{changepage}
-\usepackage{xspace}
-
 \usepackage{subfigure}
-\usepackage{textcomp}
-\usepackage[only,llbracket,rrbracket]{stmaryrd}
+\usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{fancyvrb}
+\usepackage{pythonhighlight}
 
 % Bibliography
 \usepackage[round,authoryear,comma,sort]{natbib}
@@ -114,7 +113,7 @@
 \newcommand{\emp}[1]{\texttt{#1}}
 \newcommand{\bit}{\begin{itemize}}
 \newcommand{\eit}{\end{itemize}}
-\newcommand{\slepc}{\projectfont{SLEPc}}
+\newcommand{\slepc}{\packagefont{SLEPc}}
 
 % Notation macros
 \newcommand{\dx}{\, \mathrm{d}x}
@@ -161,3 +160,14 @@
 
 % Start with empty pagestyle
 \pagestyle{empty}
+
+% Remove these
+\newcommand{\ffc}{FFC}
+\newcommand{\ufl}{UFL}
+\newcommand{\ufc}{UFC}
+\newcommand{\fiat}{FIAT}
+\newcommand{\sfc}{FIAT}
+\newcommand{\pydolfin}{PyDOLFIN}
+\newcommand{\ferrari}{FErari}
+\newcommand{\viper}{Viper}
+
