--- a/notation/notation.tex
+++ b/notation/notation.tex
@@ -60,3 +60,174 @@ Space-time slab S_n = \mathcal{T}\times I_n
 \end{itemize}
 
 \end{document}
+\fenicsappendix{Notation}{Notation}
+
+%------------------------------------------------------------------------------
+
+The following notation is used throughout this book.
+
+\small
+\linespread{1.2}
+  \begin{longtable}{ccl}
+    $A$ &--&
+    the \emph{global tensor} with entries $\{A_i\}_{i\in\mathcal{I}}$ \\
+    $A^K$ &--&
+    the \emph{element tensor} with entries $\{A^K_i\}_{i\in\mathcal{I}_K}$ \\
+    $A^0$ &--&
+    the \emph{reference tensor} with entries $\{A^0_{i\alpha}\}_{i\in\mathcal{I}_K,\alpha\in\mathcal{A}}$ \\
+    $a$ &--&
+    a multilinear form \\
+    $a_K$ &--&
+    the local contribution to a multilinear form $a$ from a cell $K$ \\
+    $\mathcal{A}$ &--&
+    the set of \emph{secondary indices} \\
+    $\mathcal{B}$ &--&
+    the set of \emph{auxiliary indices} \\
+    $e$ &--&
+    the \emph{error}, $e = u_h - u$ \\
+    $F_K$ &--&
+    the mapping from the reference cell $K_0$ to $K$ \\
+    $G_K$ &--&
+    the \emph{geometry tensor} with entries $\{G_K^{\alpha}\}_{\alpha\in\mathcal{A}}$ \\
+    $\mathcal{I}$ &--&
+    the set $\prod_{j=1}^{\rho} [1,N^j]$ of indices for the global tensor $A$ \\
+    $\mathcal{I}_K$ &--&
+    the set $\prod_{j=1}^{\rho} [1,n_K^j]$ of indices for the element tensor $A^K$ (\emph{primary indices}) \\
+    $\iota_K$ &--&
+    the \emph{local-to-global mapping} from $[1,n_K]$ to $[1,N]$ \\
+    $K$ &--&
+    a \emph{cell} in the mesh~$\mathcal{T}$ \\
+    $K_0$ &--&
+    the \emph{reference cell} \\
+    $L$ &--&
+    a linear form (functional) on $\hat{V}$ or $\hat{V}_h$ \\
+    $\mathcal{L}$ &--&
+    the degrees of freedom (linear functionals) on $V_h$ \\
+    $\mathcal{L}_K$ &--&
+    the degrees of freedom (linear functionals) on $\mathcal{P}_K$ \\
+    $\mathcal{L}_0$ &--&
+    the degrees of freedom (linear functionals) on $\mathcal{P}_0$ \\
+    $N$ &--&
+    the dimension of $\hat{V}_h$ and $V_h$ \\
+    $n_K$ &--&
+    the dimension of $\mathcal{P}_K$ \\
+    $\ell_i$ &--&
+    a degree of freedom (linear functional) on $V_h$ \\
+    $\ell^K_i$ &--&
+    a degree of freedom (linear functional) on $\mathcal{P}_K$ \\
+    $\ell^0_i$ &--&
+    a degree of freedom (linear functional) on $\mathcal{P}_0$ \\
+    $\mathcal{P}_K$ &--&
+    the local function space on a cell $K$ \\
+    $\mathcal{P}_0$ &--&
+    the local function space on the reference cell $K_0$ \\
+    $P_q(K)$ &--&
+    the space of polynomials of degree $\leq q$ on $K$ \\
+    $r$ &--&
+    the (weak) residual, $r(v) = a(v, u_h) - L(v)$ or $r(v) = F(u_h; v)$ \\
+    $u_h$ &--&
+    the finite element solution, $u_h \in V_h$ \\
+    $U$ &--&
+    the vector of degrees of freedom for $u_h = \sum_{i=1}^N U_i \phi_i$ \\
+    $u$ &--&
+    the exact solution of a variational problem, $u \in V$ \\
+    $\hat{V}$ &--&
+    the test space \\
+    $V$ &--&
+    the trial space \\
+    $\hat{V}^*$ &--&
+    the dual test space, $\hat{V}^* = V_0$ \\
+    $V^*$ &--&
+    the dual trial space, $V^* = \hat{V}$ \\
+    $\hat{V}_h$ &--&
+    the discrete test space \\
+    $V_h$ &--&
+    the discrete trial space \\
+    $\phi_i$ &--&
+    a basis function in $V_h$ \\
+    $\hat{\phi}_i$ &--&
+    a basis function in $\hat{V}_h$ \\
+    $\phi_i^K$ &--&
+    a basis function in $\mathcal{P}_K$ \\
+    $\Phi_i$ &--&
+    a basis function in $\mathcal{P}_0$ \\
+    $z$ &--&
+    the \emph{dual solution}, $z \in V^*$ \\
+    $\mathcal{T}$ &--&
+    the \emph{mesh}, $\mathcal{T} = \{K\}$ \\
+    $\Omega$ &--&
+    a bounded domain in~$\R^d$ \\
+  \end{longtable}
+\linespread{1.0}
+* Anders:  Import all bibliographies OK
+* Anders:  Update notation appendix OK
+
+* Editors: Check notation appendix
+* Editors: Spell check
+* Editors: Choose environment for code listings
+
+* Authors: Use common bibliography in all chapters
+* Authors: Prefix all labels by chapter
+* Authors: Use common width in figures: \smallwidth, \largewidth
+This repository contains all files for the FEniCS book.
+
+Instructions for authors
+------------------------
+
+* All files for chapter [foo] are located in the subdirectory chapters/foo.
+
+* Write the chapter in chapters/foo/chapter.tex.
+
+* Put SVG and EPS files under
+
+    chapters/foo/svg
+    chapters/foo/eps
+
+* References are stored in the common file bibliography.bib. If you find
+  that a reference is missing, submit it to one of the editors in BibTeX
+  format and it will be imported into the common bibliography.
+
+  Most (all?) references used in the currently included chapters have been
+  imported into the common bibliography using JabRef with keys [authors2][year]
+  but the citations have not been updated in all chapters.
+
+* All labels inside a chapter should be prefixed by the chapter prefix.
+  For chapter [foo], the following labels should be used:
+
+    \label{foo:eq:bar}  for equations
+    \label{foo:fig:bar} for figures
+    \label{foo:alg:bar} for algorithms
+    \label{foo:sec:bar} for sections
+
+* All chapters are automatically labeled by their prefix.
+  To refer to another chapter named [foo], use
+
+    In Chapter~\ref{chap:foo}, ...
+
+* Only use EPS figures. We rely on psfrag for replacement of text
+  in figures and so cannot use pdflatex.
+
+* Use psfrag to replace axis labels etc with LaTeX:
+
+    \psfrag{x}{$x$}
+    \psfrag{y}{$y$}
+
+* Use Inkscape to draw figures. You can use one of the SVG files from
+  chapter [kirby-6] as a template for line widths and colors.
+
+* Use a spell checker (American English).
+
+* Use \index{} to include important terms in the book index.
+
+* Build the book by typing 'make' (for DVI) or 'make final' (for PDF).
+
+* Send comments and questions to fenics-book@fenics.org.
+
+* This repository is primarily intended for editing. Developing the
+  text itself should preferrably be done offline (or online in another
+  repository) as not to flood the mailing list with very frequent
+  commits for all 40 chapters.
+
+Anders Logg <logg@simula.no>
+Kent-Andre Mardal <kent-and@simula.no>
+Garth N. Wells <gnw20@cam.ac.uk>
