Get all chapters in part I to compile

--- a/notation/notation.tex
+++ b/notation/notation.tex
@@ -8,6 +8,10 @@
 
 \section*{General}
 
+Remove all chapter macros or possibly add prefixed by chapter
+
+Refer to other chapters
+
 No psfrag
 
 Text for author list
