Get all chapters in part II to compile

--- a/book.tex
+++ b/book.tex
@@ -54,16 +54,16 @@
 
 \part{Implementation}
 
-%\fenicsinput{logg-2}
-%\fenicsinput{logg-1}
-%\fenicsinput{kirby-3}
-%\fenicsinput{kirby-2}
-%\fenicsinput{wilbers}
-%\fenicsinput{alnes-3}
-%\fenicsinput{alnes-2}
-%\fenicsinput{alnes-1}
-%\fenicsinput{hoffman-2}
-%\fenicsinput{mardal-2}
+\fenicsinput{logg-2}
+\fenicsinput{logg-1}
+\fenicsinput{kirby-3}
+\fenicsinput{kirby-2}
+\fenicsinput{wilbers}
+\fenicsinput{alnes-3}
+\fenicsinput{alnes-2}
+\fenicsinput{alnes-1}
+\fenicsinput{hoffman-2}
+\fenicsinput{mardal-2}
 
 \part{Applications}
 
