Get entire book to compile, finally.

--- a/notation/notation.tex
+++ b/notation/notation.tex
@@ -8,6 +8,10 @@
 
 \section*{General}
 
+Justify all text
+
+Use dollars for math
+
 Remove all chapter macros or possibly add prefixed by chapter
 
 Refer to other chapters
