--- a/book.tex
+++ b/book.tex
@@ -67,23 +67,23 @@
 
 \part{Applications}
 
-%\fenicsinput{terrel}
-%\fenicsinput{kvs-1}
-%\fenicsinput{mortensen}
-%\fenicsinput{kvs-2}
-%\fenicsinput{hentschel}
-%\fenicsinput{hoffman-1}
-%\fenicsinput{lopes}
-%\fenicsinput{shan}
-%\fenicsinput{hake}
-%\fenicsinput{lezar}
-%\fenicsinput{oelgaard-1}
+\fenicsinput{terrel}
+\fenicsinput{kvs-1}
+\fenicsinput{mortensen}
+\fenicsinput{kvs-2}
+\fenicsinput{hentschel}
+\fenicsinput{hoffman-1}
+\fenicsinput{lopes}
+\fenicsinput{shan}
+\fenicsinput{hake}
+\fenicsinput{lezar}
+\fenicsinput{oelgaard-1}
 %\fenicsinput{narayanan}
-%\fenicsinput{nikbakht}
-%\fenicsinput{schroll}
-%\fenicsinput{hoffman-3}
-%\fenicsinput{mardal-4}
-%\fenicsinput{rognes}
+\fenicsinput{nikbakht}
+\fenicsinput{schroll}
+\fenicsinput{hoffman-3}
+\fenicsinput{mardal-4}
+\fenicsinput{rognes}
 
 %------------------------------------------------------------------------------
 
