Work on author instructionsxs

--- a/notation/notation.tex
+++ b/notation/notation.tex
@@ -1,85 +1,132 @@
 \documentclass{article}
 
-\newcommand{\inner}[2]{\langle #1, #2 \rangle}
+\usepackage{url}
+
+\title{Instructions for FEniCS book authors}
+\date{\today}
 
 \begin{document}
 
-\linespread{1.2}
+\maketitle
 
-\section*{General}
-
-Justify all text
-
-Use dollars for math
-
-Remove all chapter macros or possibly add prefixed by chapter
-
-Refer to other chapters
-
-No psfrag
-
-Text for author list
-
-Code environments: begin{python}, begin{c++}
-
-Space-time slab S_n = \mathcal{T}\times I_n
+\section*{General instructions}
 
 \begin{itemize}
 \item
-  Titles of chapters, sections etc. should \emph{not} be capitalized
+  Carefully read the comments from the referees and editors and update
+  your chapter accordingly. Send a detailed response to the referee
+  comments along with your revised chapter.
 \item
-  Only number referenced equations
+  Make sure to run a spell-checker (American English) before you
+  submit your chapter.
+\item
+  Make sure that all references are complete and accurate and that
+  your chapter compiles without warnings.
+\item
+  Submit your book chapter as a patch against the latest book
+  repository. Note in particular that the style files for the book
+  have changed, so changes should be make relative to the latest
+  version of your chapter in the book repository (not your local
+  copy). Note that your chapter may already have gone through some
+  minor modifications in order to compile against the new style files.
+\item
+  Along with your submission, supply a short text for your
+  affiliation, including your email address and any funding
+  acknowledgments. Your affiliation will be added to an appendix of
+  the book that lists the affiliations of all authors.
+\item
+  Make sure to browse through all other chapters and add appropriate
+  references to other relevant chapters.
 \end{itemize}
 
-\section*{Variable names}
+\section*{Spectific typesetting instructions}
 
-\begin{tabular}{ccl}
-  $T$ &--&
-  cell (note: changed from $K$) \\
-  $A_T$ &--&
-  element tensor (note: changed from $A^K$) \\
-\end{tabular}
+\begin{itemize}
+\item
+  Avoid excessive use of \LaTeX{} macros in chapters. Not only does it
+  complicate editing if for example \verb|\begin{itemize}| is replaced
+  by \verb|\bit|, but it may also conflict with macros defined in
+  other chapters. If it is necessary to define macros, then prefix the
+  macros with the chapter prefix, or ask the editors to add them
+  globally.
+\item
+  Justify your text (line-breaking) and make sure it looks clean. In
+  Emacs, this can be handled by \verb|M-x auto-fill-mode| or pressing
+  \verb|M-q| on each paragraph.
+\item
+  Use \verb|~| in references and citations: \verb|... in~\ref{...}|,
+  \verb|... in~\cite{...}|.
+\item
+  Chapters should be referred to using \verb|Chapter~\ref{chap:prefix}|,
+  where \verb|prefix| is the chapter prefix.
+\item
+  Use \verb|\eqref{}| to refer to equations. A typical usage would be \\
+  \verb|It follows from~\eqref{eq:hoffman-1:ns} that...|.
+\item
+  All chapter labels should be prefixed with the type of label and the
+  chapter prefix, for example \verb|fig:hoffman-1:foo| or
+  \verb|tab:narayanan:bar|.
+\item
+  Use the environments \verb|\begin/end{python}| and
+  \verb|\begin/end{c++}| to typeset Python and C++ code.
+\item
+  The book must be built using \verb|pdflatex| (to work with the new
+  style files). This means that EPS figures can no longer be
+  used. Instead, PDF figures should be used. All EPS figures in the
+  book repository have been converted to PDF using \verb|epstopdf|,
+  which preserves vector graphics. Make sure all images in your
+  chapter are supplied as PDF files and, where possible, in a scalable
+  vector graphics format (no bitmaps). It follows that
+  \verb|\psfrag{}| can no longer be used so all images that rely on
+  \verb|\psfrag{}| must be replaced by appropriate PDF images.
+\item
+  Supply original image files (SVG) where possible to enable editing
+  of images if this becomes necessary.
+\item
+  Use Inkscape to draw figures. You can use one of the SVG files from
+  chapter [kirby6] as a template for line widths and colors.
+\item
+  Where possible, use \verb|width=\smallfig| or \verb|width=\largefig|
+  to specify image sizes.
+\item
+  Place image files in subdirectories named \verb|pdf|, \verb|svg|
+  etc. inside the chapter subdirectory.
+\item
+  Use \verb|$...$| for inline math, not \verb|\(...\)|. Use of
+  \verb|\(...\)| in captions breaks the new style files.
+\item
+  Don't put \verb|\label{...}| inside \verb|\caption{...}|. This
+  breaks the new style files.
+\item
+  Titles of chapters, sections etc. should \emph{not} be capitalized
+  (with the exception of names and the first letter).
+\item
+  Only number referenced equations. Use \verb|\begin/end{displaymath}|
+  or \verb|\begin/end{equation*}| until you find out that you actually
+  need to reference an equation.
+\item
+  Use \emph{subcomponent}, \emph{subelement} instead of \emph{sub
+    component}, \emph{sub element} etc.,
+  cf. \url{http://www.thefreedictionary.com/subcomponent}.
+\item
+  Use \verb|\index{}| to include important terms in the book index.
+\item
+  Consider the list of variable names given below and try to follow it
+  where possible.
+\end{itemize}
 
-\section*{Math notation}
+\section*{Names of variables}
 
-\begin{tabular}{ccl}
-  $\inner{v}{w}$ &--&
-  inner product, use command \texttt{inner} \\
-\end{tabular}
-
-\section*{Other notation}
-
-\begin{tabular}{ccl}
-  Use \emph{subcomponent}, \emph{subelement} instead of
-  \emph{sub component}, \emp{sub element} etc., cf.
-  http://www.thefreedictionary.com/subcomponent.
-\end{tabular}
 
 \section*{Useful macros}
 
-\begin{itemize}
-\item
-  Use \texttt{eqref} to refer to equations
-\end{itemize}
-
-\section*{Things to discuss}
-
-\begin{itemize}
-\item
-  $a(v, u)$ or $a(u, v)$?
-\item
-  British or American English?
-\end{itemize}
 
 \end{document}
-\fenicsappendix{Notation}{Notation}
 
-%------------------------------------------------------------------------------
+\section*{Names of variables}
 
-The following notation is used throughout this book.
 
-\small
-\linespread{1.2}
+\small \linespread{1.2}
   \begin{longtable}{ccl}
     $A$ &--&
     the \emph{global tensor} with entries $\{A_i\}_{i\in\mathcal{I}}$ \\
@@ -171,75 +218,43 @@ The following notation is used throughout this book.
     a bounded domain in~$\R^d$ \\
   \end{longtable}
 \linespread{1.0}
-* Anders:  Import all bibliographies OK
-* Anders:  Update notation appendix OK
 
-* Editors: Check notation appendix
-* Editors: Spell check
-* Editors: Choose environment for code listings
 
-* Authors: Use common bibliography in all chapters
-* Authors: Prefix all labels by chapter
-* Authors: Use common width in figures: \smallwidth, \largewidth
-This repository contains all files for the FEniCS book.
+\end{document}
 
-Instructions for authors
-------------------------
 
-* All files for chapter [foo] are located in the subdirectory chapters/foo.
+\newcommand{\inner}[2]{\langle #1, #2 \rangle}
+\llbracket  \cdot \rrbracket  - jump  terms
+k_n - time step
+I_n  - time interval of length k_{n-1} - k_{n}
+S_n - space-time slab \mathcal{T}\times I_n
+R_K - strong residual on element K
+R_{\partial K} - strong residual on facet \partial K
+u_{hk} - the finite element solution in space-time
 
-* Write the chapter in chapters/foo/chapter.tex.
+Space-time slab S_n = \mathcal{T}\times I_n
 
-* Put SVG and EPS files under
+\section*{Variable names}
 
-    chapters/foo/svg
-    chapters/foo/eps
+\begin{tabular}{ccl}
+  $T$ &--&
+  cell (note: changed from $K$) \\
+  $A_T$ &--&
+  element tensor (note: changed from $A^K$) \\
+\end{tabular}
 
-* References are stored in the common file bibliography.bib. If you find
-  that a reference is missing, submit it to one of the editors in BibTeX
-  format and it will be imported into the common bibliography.
+\section*{Math notation}
 
-  Most (all?) references used in the currently included chapters have been
-  imported into the common bibliography using JabRef with keys [authors2][year]
-  but the citations have not been updated in all chapters.
+\begin{tabular}{ccl}
+  $\inner{v}{w}$ &--&
+  inner product, use command \texttt{inner} \\
+\end{tabular}
 
-* All labels inside a chapter should be prefixed by the chapter prefix.
-  For chapter [foo], the following labels should be used:
+\section*{Other notation}
 
-    \label{foo:eq:bar}  for equations
-    \label{foo:fig:bar} for figures
-    \label{foo:alg:bar} for algorithms
-    \label{foo:sec:bar} for sections
+\begin{itemize}
+\item
+  $a(v, u)$ or $a(u, v)$?
+\end{itemize}
 
-* All chapters are automatically labeled by their prefix.
-  To refer to another chapter named [foo], use
-
-    In Chapter~\ref{chap:foo}, ...
-
-* Only use EPS figures. We rely on psfrag for replacement of text
-  in figures and so cannot use pdflatex.
-
-* Use psfrag to replace axis labels etc with LaTeX:
-
-    \psfrag{x}{$x$}
-    \psfrag{y}{$y$}
-
-* Use Inkscape to draw figures. You can use one of the SVG files from
-  chapter [kirby-6] as a template for line widths and colors.
-
-* Use a spell checker (American English).
-
-* Use \index{} to include important terms in the book index.
-
-* Build the book by typing 'make' (for DVI) or 'make final' (for PDF).
-
-* Send comments and questions to fenics-book@fenics.org.
-
-* This repository is primarily intended for editing. Developing the
-  text itself should preferrably be done offline (or online in another
-  repository) as not to flood the mailing list with very frequent
-  commits for all 40 chapters.
-
-Anders Logg <logg@simula.no>
-Kent-Andre Mardal <kent-and@simula.no>
-Garth N. Wells <gnw20@cam.ac.uk>
+\end{document}
